[package]
name = "plexus-codegen-rust"
version = "0.1.20260125170504-32e46854"
edition = "2021"
license = "AGPL-3.0-only"
description = "Rust client generator for Plexus RPC"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
anyhow = "1.0"
async-stream = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
